[package]
name = "bevy_hop"
version = "1.0.2"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["exr", "mp3"] }
bevy_skein = "0.5"
bevy_fps_controller = { git = "https://github.com/qhdwight/bevy_fps_controller.git", features = ["avian"], branch = "development" }
avian3d = "0.5"
avian_pickup = "0.4"
bevy_hanabi = { version = "0.18", default-features = false, features = ["3d"] }

# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_console = "0.17"
bevy_water = { version = "0.18", default-features = false, features = ["webgpu","embed_shaders","depth_prepass"] }
bevy-inspector-egui = "0.36"
bevy_egui = "0.39"
bevy_dev_tools = "0.18"


# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"


